--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
             versionNameSuffix " Debug"
             debuggable true
         }
+        buildTypes.each {
+            it.buildConfigField 'String', 'API_KEY', "\""+getApiKey()+"\""
+        }
     }
     lintOptions {
         abortOnError false
@@ -89,6 +92,8 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow-core:$DBFLOW_VERSION"
     compile "com.github.Raizlabs.DBFlow:dbflow:$DBFLOW_VERSION"
 
+    compile 'com.google.android:flexbox:0.2.5'
+
     // Instrumentation test dependencies
     androidTestCompile jUnit
     androidTestCompile mockito
@@ -116,4 +121,10 @@ dependencies {
     testCompile 'org.robolectric:robolectric:3.1'
 
 
+}
+
+def getApiKey(){
+    def Properties props = new Properties()
+    props.load(new FileInputStream(new File('secrets.properties')))
+    return props['API_KEY']
 }
