--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: android
 jdk: oraclejdk8
 sudo: required
-
 android:
   components:
-    - platform-tools
-    - tools
-    - extra-android-support
-    - extra-android-m2repository
-    - extra-google-m2repository
-    - build-tools-25.0.2
-    - android-25
-
-script: "./gradlew build --stacktrace"
+  - platform-tools
+  - tools
+  - extra-android-support
+  - extra-android-m2repository
+  - extra-google-m2repository
+  - build-tools-25.0.2
+  - android-25
+script: ./gradlew build --stacktrace
+before_install:
+- openssl aes-256-cbc -K $encrypted_b53bce182909_key -iv $encrypted_b53bce182909_iv
+  -in secrets.properties.enc -out secrets.properties -d
