--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,23 @@
             android:authorities="com.lusifer.shabdkosh"
             android:exported="true"
             android:name=".data.local.ShabdkoshDatabase_Provider"/>
+
+
+        <receiver
+            android:name="com.lusifer.shabdkosh.ui.widget.WidgetProvider"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@layout/widget_layout"/>
+        </receiver>
+        <service
+            android:name=".ui.widget.StockWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
 </manifest>
