--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
 
     compile 'com.github.arimorty:floatingsearchview:2.0.3'
+    compile 'com.github.silvestrpredko:dot-progress-bar:0.1.4@aar'
 
     debugCompile "com.facebook.stetho:stetho:$STETHO_VERSION"
     debugCompile "com.facebook.stetho:stetho-okhttp3:$STETHO_VERSION"
