--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,8 @@
             android:supportsRtl="true"
             android:name=".ShabdkoshApplication"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+        <activity android:name=".ui.main.MainActivity"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
         <activity
             android:name=".ui.detail.DetailActivity"
             android:parentActivityName=".ui.main.MainActivity">
@@ -25,13 +20,12 @@
         </activity>
 
         <provider
+            android:name=".data.local.ShabdkoshDatabase_Provider"
             android:authorities="com.lusifer.shabdkosh"
-            android:exported="true"
-            android:name=".data.local.ShabdkoshDatabase_Provider"/>
-
+            android:exported="true"/>
 
         <receiver
-            android:name="com.lusifer.shabdkosh.ui.widget.WidgetProvider"
+            android:name=".ui.widget.WidgetProvider"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name">
             <intent-filter>
@@ -45,6 +39,14 @@
         <service
             android:name=".ui.widget.StockWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
+        <activity android:name=".ui.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
