--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,23 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+    signingConfigs {
+        config {
+            keyAlias 'Shabdkosh'
+            keyPassword 'password'
+            storeFile file('../Shabdkosh.jks')
+            storePassword 'password'
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            zipAlignEnabled true
         }
         debug {
             versionNameSuffix " Debug"
