--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
             debuggable true
         }
         buildTypes.each {
-            it.buildConfigField 'String', 'API_KEY', "\""+getApiKey()+"\""
+            it.buildConfigField 'String', 'API_KEY', "\"" + getApiKey() + "\""
         }
     }
     lintOptions {
@@ -93,11 +93,7 @@ dependencies {
     compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
     annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
 
-    compile 'com.github.arimorty:floatingsearchview:2.0.3'
-    compile 'com.github.silvestrpredko:dot-progress-bar:0.1.4@aar'
 
     debugCompile "com.facebook.stetho:stetho:$STETHO_VERSION"
     debugCompile "com.facebook.stetho:stetho-okhttp3:$STETHO_VERSION"
@@ -106,8 +102,6 @@ dependencies {
 
     compile "com.github.Raizlabs.DBFlow:dbflow-core:$DBFLOW_VERSION"
     compile "com.github.Raizlabs.DBFlow:dbflow:$DBFLOW_VERSION"
-
-    compile 'com.google.android:flexbox:0.2.5'
 
     // Instrumentation test dependencies
     androidTestCompile jUnit
@@ -133,13 +127,22 @@ dependencies {
     testCompile "org.hamcrest:hamcrest-core:$HAMCREST_VERSION"
     testCompile "org.hamcrest:hamcrest-library:$HAMCREST_VERSION"
     testCompile "org.hamcrest:hamcrest-integration:$HAMCREST_VERSION"
+
+
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'com.github.arimorty:floatingsearchview:2.0.3'
+    compile 'com.github.silvestrpredko:dot-progress-bar:0.1.4@aar'
+    compile 'com.google.android:flexbox:0.2.5'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     testCompile 'org.robolectric:robolectric:3.1'
-
-
 }
 
-def getApiKey(){
+def getApiKey() {
     def Properties props = new Properties()
     props.load(new FileInputStream(new File('secrets.properties')))
     return props['API_KEY']
 }
+
+apply plugin: 'com.google.gms.google-services'
